objects/SObjectConfig__c.object
<CustomObject>
    <fields>
        <fullName>IsMultiLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMultiLabel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectApiName__c</fullName>
        <label>SObjectApiName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TagField__c</fullName>
        <label>TagField</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SObjectConfig</label>
    <nameField>
        <label>SObjectConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjectConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>